# comfyui-ltx2-efficient

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
Reference/: 1Why LTX2 pegs your GPU at 100%.md  Bug.txt
frontend/ltx2-efficient-sampler/: index.html  package-lock.json  package.json
frontend/ltx2-efficient-sampler/src/: LTX2EfficientNode.vue
nodes/: ffn_chunking.py  gpu_monitor.py  interpolation.py  ltx2_conditioning.py  ltx2_efficient_sampler.py  ltx2_efficient_sampler_pro.py  ltx2_experimental_sampler.py  ltx2_latent_utils.py  ltx2_model_patcher.py  ltx2_text_encode_optimized.py  ltx2_vae_decode.py  text_encoder_optimizer.py
nodes/optimization_engines/: __init__.py  adaptive_cache.py  base_engine.py  combined.py  step_adaptive.py  token_merge.py
workflow/: Kakachiex-LTXV-GGUF-WF_V2-Pro.json  Kakachiex-LTXV-GGUF-WF_V2.json
