[project]
name = "ltx2-efficient"
description = "High-performance custom node for LTX2 video generation designed to reduce GPU usage, VRAM requirements, and temperature on consumer GPUs."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# LTX2 Efficient Video Sampler - Requirements", "# Optional: GPU temperature monitoring", "# Install for thermal auto-scaling feature", "pynvml>=11.5.0", "# Note: Core dependencies (torch, comfy) are provided by ComfyUI"]

[project.urls]
Repository = "https://github.com/kakachiex2/comfyui-ltx2-efficient"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/kakachiex2/comfyui-ltx2-efficient/wiki"
"Bug Tracker" = "https://github.com/kakachiex2/comfyui-ltx2-efficient/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-ltx2-efficient"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

